<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/txtViewResultado"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/resultValue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtVal2" />

    <Button
        android:id="@+id/btnUm"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:onClick="getButtonValue"
        android:text="1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnQuatro" />

    <Button
        android:id="@+id/btnZero"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:onClick="getButtonValue"
        android:text="0"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnUm" />

    <Button
        android:id="@+id/btnVirgula"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="getButtonValue"
        android:text="."
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnDois"
        app:layout_constraintTop_toTopOf="@+id/btnZero" />

    <Button
        android:id="@+id/btnTres"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="getButtonValue"
        android:text="3"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/btnSeis"
        app:layout_constraintTop_toTopOf="@+id/btnUm" />

    <Button
        android:id="@+id/btnDois"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="getButtonValue"
        android:text="2"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnCinco"
        app:layout_constraintTop_toTopOf="@+id/btnUm" />

    <TextView
        android:id="@+id/txtViewVal1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/firstValue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtViewVal2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/secondValue"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTxtVal1" />

    <EditText
        android:id="@+id/editTxtVal1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/firstValueHint"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@id/txtViewVal1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewVal1"
        app:layout_constraintTop_toTopOf="@+id/txtViewVal1" />

    <EditText
        android:id="@+id/editTxtVal2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:hint="@string/secondValueHint"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@id/txtViewVal2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewVal2"
        app:layout_constraintTop_toTopOf="@+id/txtViewVal2" />

    <Button
        android:id="@+id/btnSete"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:onClick="getButtonValue"
        android:text="7"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtViewResultado" />

    <Button
        android:id="@+id/btnQuatro"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:onClick="getButtonValue"
        android:text="4"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnSete" />

    <Button
        android:id="@+id/btnCinco"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="getButtonValue"
        android:text="5"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/btnOito"
        app:layout_constraintTop_toTopOf="@+id/btnQuatro" />

    <Button
        android:id="@+id/btnSeis"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:onClick="getButtonValue"
        android:text="6"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="@+id/btnNove"
        app:layout_constraintTop_toTopOf="@+id/btnQuatro" />

    <Button
        android:id="@+id/btnOito"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:onClick="getButtonValue"
        android:text="8"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnNove"
        app:layout_constraintStart_toEndOf="@+id/btnSete"
        app:layout_constraintTop_toTopOf="@+id/btnSete" />

    <Button
        android:id="@+id/btnNove"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:onClick="getButtonValue"
        android:text="9"
        android:textSize="24sp"
        app:layout_constraintEnd_toStartOf="@+id/btnDivisao"
        app:layout_constraintTop_toTopOf="@+id/btnSete" />

    <Button
        android:id="@+id/btnDivisao"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:onClick="calculateByOperationCode"
        android:text="÷"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnSete" />

    <Button
        android:id="@+id/btnMultiplicacao"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:onClick="calculateByOperationCode"
        android:text="×"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnQuatro" />

    <Button
        android:id="@+id/btnSubtracao"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:onClick="calculateByOperationCode"
        android:text="-"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnUm" />

    <Button
        android:id="@+id/btnAdicao"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="20dp"
        android:onClick="calculateByOperationCode"
        android:text="+"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/btnZero" />

    <Button
        android:id="@+id/btnLimpar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:onClick="cleanFields"
        android:text="@string/btnLimpar"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnZero" />

    <EditText
        android:id="@+id/editTextResultado"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:clickable="false"
        android:contextClickable="false"
        android:cursorVisible="false"
        android:editable="false"
        android:ems="10"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:inputType="numberDecimal"
        app:layout_constraintBaseline_toBaselineOf="@id/txtViewResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/txtViewResultado"
        app:layout_constraintTop_toTopOf="@+id/txtViewResultado" />

</androidx.constraintlayout.widget.ConstraintLayout>